add_executable(integer_compute integer_compute.c)
add_executable(integer_trans integer_trans.cpp)
add_executable(inplace_swape inplace_swape.c)
add_executable(integer_limit integer_limit.c)
add_executable(sum_elements sum_elements.c)

add_executable(unsigned_convert unsigned_convert.cpp)
add_executable(extern_bits extern_bits.cpp)
add_executable(show_number show_number.cpp)
