add_executable(integer_compute integer_compute.c)
add_executable(integer_trans integer_trans.cpp)
add_executable(inplace_swape inplace_swape.c)
add_executable(integer_limit integer_limit.c)
add_executable(sum_elements sum_elements.c)

add_executable(unsigned_convert unsigned_convert.cpp)
add_executable(extern_bits extern_bits.cpp)
add_executable(show_number show_number.cpp)
add_executable(2_59 2_59.cpp)
add_executable(2_60 2_60.cpp)
add_executable(2_61 2_61.cpp)
add_executable(2_62 2_62.cpp)
add_executable(2_63 2_63.cpp)
add_executable(2_64 2_64.cpp)
add_executable(2_65 2_65.cpp)
add_executable(2_66 2_66.cpp)
add_executable(2_67 2_67.cpp)
add_executable(2_68 2_68.c)
add_executable(2_69 2_69.c)
add_executable(2_70 2_70.c)
add_executable(2_73 2_73.c)
add_executable(2_74 2_74.c)

add_executable(p2_1 p2_1.cpp)
